--- a/assets/css/lawyer.css
+++ b/assets/css/lawyer.css
@@ -337,4 +337,11 @@ span {
   .lp-target-section p{
     font-size: 1.2rem;
   }
+
+  .cta-section h2{
+    font-size: 1.8rem;
+  }
+  .cta-section p{
+    font-size: 1.2rem;
+  }
 }
