--- a/assets/css/lawyer.css
+++ b/assets/css/lawyer.css
@@ -590,6 +590,33 @@ span {
 }
 
 
+/********************************
+  FOOTER
+*********************************/
+.footer-section {
+  background-color: #000; /* Fondo negro */
+}
+
+.footer-link {
+  color: #f1f1f1; /* Color claro para texto */
+  text-decoration: none;
+  font-weight: 500;
+  transition: color 0.3s ease;
+}
+
+.footer-link:hover {
+  color: #1ab3c0; /* Color de hover (personalízalo) */
+}
+
+/* Ajusta la alineación en pantallas pequeñas y grandes */
+@media (max-width: 767.98px) {
+  .footer-section .col-md-6.text-md-end {
+    text-align: center;
+    margin-top: 1rem;
+  }
+}
+
+
 
 @media (max-width: 767.98px) {
   h2 {
